--- a/物理学/本科课程/热力学与统计物理/课堂笔记/系综理论.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/系综理论.md
@@ -11,5 +11,59 @@
 ### 微正则分布
 微正则系综是处于平衡态的孤立系统，即体系的能量 $E$ 和粒子个数 $N$ 都为常数。设系统的分布函数为 $\displaystyle \rho$，由归一化条件可得 $\displaystyle \begin{aligned}\int\rho d\Omega=1\end{aligned}$，其中 $\displaystyle d\Omega$ 为 $\Gamma$  空间的一个小体积元 $\displaystyle dx_{1}dx_{2}\cdots dx_{n}$。
 #### 拉格朗日乘子法
+定义 $\displaystyle \ln p$ 的期望
+$$
+\sigma\equiv\langle\ln\rho\rangle=\int\rho\ln\rho d\Omega
+$$ 并利用拉格朗日乘子法求极值。约束条件为分布函数的归一化条件 $\displaystyle \begin{aligned}\int\rho d\Omega=1\end{aligned}$ ，构造式子
+$$
+L=\sigma-\lambda\int\rho d\Omega=\int\rho\ln\rho d\Omega-\lambda\int\rho d\Omega
+$$
+其中 $λ$ 为拉格朗日乘子。对等式两边求变分
+$$
+\delta L=\int(\ln\rho+1-\lambda)\delta\rho d\Omega=0
+$$
+即得 $\rho=e^{\lambda-1}$
 #### 等概率原理
+代入得
+$$
+\int\rho d\Omega=\int e^{\lambda-1}d\Omega=e^{\lambda-1}\Omega=1
+$$
+即等概率原理 $\rho=\frac{1}{\Omega}$，当系统处于平衡时，如果除能量一定、体积一定和粒子数一定外,没有任何其他的限制，则发现系统处在各微观状态的概率都是相同的。
+
+相空间无穷大其演化的最终结果：热寂说
 ### 正则系综
+正则系综的宏观条件是系统与大热库（或热库）接触达到平衡。对正则系综，体积与粒子数均保持固定，但系统可以与大热源发生能量交换，因而系统的能量是一个变量，大热源提供了确定的温度。换句话说，系统的内能（能量的期望）和粒子数为常数。因此相比于微正则系综，正则系综的约束条件为：
+$$
+\begin{aligned}\langle E\rangle&=\int E\rho d\Omega=const\\\int\rho d\Omega&=1\end{aligned}
+$$
+构造
+$$
+\begin{aligned}
+&\text{L} =\sigma-\lambda\int\rho d\Omega+\beta\langle E\rangle   \\
+&=\int(\rho\ln\rho+\beta E\rho-\lambda\rho)d\Omega 
+\end{aligned}
+$$
+等式两边同时求变分
+$$
+\delta L=\int(\ln\rho+\beta E-\lambda+1)\delta\rho d\Omega=0
+$$
+正则系综的分布函数为 $\displaystyle \rho=e^{\lambda-1-\beta E}$
+#### 从微正则系综推出正则系综
+微正则系综是一个与外界隔绝的孤立体系，有固定的的能量，但是微正则系综中的每一个部分之间还是会有能量交换，这一些部分可以看成是正则系综，因此正则系综可看做是微正则系综的组成部分。设微正则系综的总能量为 $E$，并将其分成 $k$ 个部分，每个部分的能量为 $E_{k}$，即 $\displaystyle \sum_{k}E_{k}=E$
+设微正则系综的分布函数为 $\displaystyle \rho(E)$，某时刻在系统中取到小块的能量的概率即各部分的分布函数为 $\displaystyle \rho_{k}(E_{k})$，每个小块的能量涨落独立，即 $\displaystyle \prod_{k}\rho_{k}(E_{k})=\rho(E)$
+构造
+$$
+L=\sigma+\beta E=\langle\ln\rho(E)\rangle+\beta E
+$$
+等式两边同时求变分
+$$
+\begin{aligned}
+\delta L& =\delta \langle\ln\rho(E)\rangle+\delta E  \\
+&=\delta\ln\rho\prod_{k}\rho_{k}+\sum_{k}\beta\delta E_{k} \\
+&=\sum_{k}(\delta\ln\rho_{k}+\beta\delta E_{k}) \\
+&=\sum_{k}\left(\frac{1}{\rho_{k}}\delta\rho_{k}+\beta\delta E_{k}\right) \\
+&=\sum_{k}\left(\frac{1}{\rho_{k}}\frac{\partial\rho_{k}}{\partial E_{k}}\delta E_{k}+\beta\delta E_{k}\right) \\
+&=\sum_{k}\Big(\frac{1}{\rho_{k}}\frac{\partial\rho_{k}}{\partial E_{k}}+\beta\Big)\delta E_{k}=0
+\end{aligned}
+$$
+微正则系综下的正则系综的分布函数为 $\displaystyle \rho_{k}=C_{k}e^{-\beta E_{k}}$
