更新 系综理论.md

--- a/物理学/本科课程/热力学与统计物理/课堂笔记/系综理论.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/系综理论.md
@@ -14,7 +14,8 @@
 定义 $\displaystyle \ln p$ 的期望
 $$
 \sigma\equiv\langle\ln\rho\rangle=\int\rho\ln\rho d\Omega
-$$ 并利用拉格朗日乘子法求极值。约束条件为分布函数的归一化条件 $\displaystyle \begin{aligned}\int\rho d\Omega=1\end{aligned}$ ，构造式子
+$$
+ 并利用拉格朗日乘子法求极值。约束条件为分布函数的归一化条件 $\displaystyle \begin{aligned}\int\rho d\Omega=1\end{aligned}$ ，构造式子
 $$
 L=\sigma-\lambda\int\rho d\Omega=\int\rho\ln\rho d\Omega-\lambda\int\rho d\Omega
 $$
@@ -67,3 +68,24 @@ $$
 \end{aligned}
 $$
 微正则系综下的正则系综的分布函数为 $\displaystyle \rho_{k}=C_{k}e^{-\beta E_{k}}$
+### 巨正则分布
+处理物体平衡性质的另一个常用系综是巨正则系综，它的宏观条件是系统与大热源和大粒子源接触达到平衡。此时，系统不仅可以与大热源发生能量交换，还可以与大粒子源发生粒子交换，因此，系统的能量与粒子数都是变量，但是能量的期望和粒子数的期望可以是常数。一般情况下，大热源往往同时也是大粒子源，给予系统确定的温度与确定的化学势。
+#### 单粒子
+先考虑只有一种粒子的情况，设有 $N$ 个粒子的系统 $k$，它的微观状态 $\displaystyle (q_{1},q_{2},\cdots,q_{N_{k}},p_{1},p_{2},\cdots,p_{N_{k}})$ 和相空间中的体积元为 $\displaystyle d\Omega_{N_{k}}=\prod_{k}^{N_{k}}dq_{k}dp_{k}$，巨正则系综的约束条件
+$$
+\begin{aligned}
+&\sum_{k}^{\infty}\int\rho(N_{k},q,p)d\Omega_{k}=1 \\
+&\sum_{k}^{\infty}\int N_{k}\rho d\Omega_{k}=\langle N\rangle=const \\
+&\sum_{k}^{\infty}\int E\rho d\Omega=\langle E\rangle=const
+\end{aligned}
+$$
+拉格朗日乘子为 $\displaystyle \mu$ ,其物理意义为化学势。可以通过拉格朗日乘子法同理得到
+$$
+\delta\sum_{N_k}\int(\rho ln\rho-\lambda\rho-\mu N_{k}\rho+\beta E\rho)\delta\Omega=0
+$$
+巨正则系综的分布函数为 $\displaystyle \rho=e^{\lambda-1+\mu N_{k}-\beta E}=e^{-k+\mu N_{k}-\beta E}$
+#### 多全同粒子
+推广到多种粒子，每种粒子各自全同，更一般的巨正则分布表达式：
+$$
+
+$$
