--- a/物理学/本科课程/热力学与统计物理/课堂笔记/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/由系综到热力学.md
@@ -1,5 +1,109 @@
+## 微正则系综与热力学
 
+### 变分
 
+设有若干参数 $\displaystyle \xi_{\lambda},\quad \lambda=1,2,\cdots$，则体系的能量为 $\displaystyle E(\xi_{\lambda})$，对应的广义力 $\displaystyle X_{\lambda}=-\frac{\partial E}{\partial\xi_{\lambda}}$，相空间的体积为能量和这些参数的函数 $\displaystyle \Omega=\Omega(E,\xi_\lambda)$。定义 $\displaystyle e^{\phi}\equiv{\frac{\partial\Omega}{\partial E}}$
 
+$$
+(\frac{\partial\Omega}{\partial\xi_{\lambda}})_{E}=-(\frac{\partial\Omega}{\partial E})_{\xi}(\frac{\partial E}{\partial\xi})_{\Omega}=e^{\phi}X_{\lambda}
+$$
 
+对 $\displaystyle \Omega$ 求全变分，对于 $\displaystyle \xi=\xi(x,y)$ 有
 
+$$
+d\xi=\left(\frac{\partial\xi}{\partial x}\right)_{y}dx+\left(\frac{\partial\xi}{\partial y}\right)_{x}dy 
+$$
+$$
+d\xi=0\Rightarrow\left(\frac{\partial x}{\partial y}\right)_{\xi}=\frac{-\left(\frac{\partial\xi}{\partial y}\right)_{x}}{\left(\frac{\partial\xi}{\partial x}\right)_{y}}
+$$
+
+则对于 $\displaystyle \Omega$ ，有
+
+$$
+\delta\Omega=\left(\frac{\partial\Omega}{\partial\mathrm{E}}\right)_{\xi\lambda}\mathrm{dE}+\sum_{\lambda}\left(\frac{\partial\Omega}{\partial\xi_{\lambda}}\right)_{\xi}\delta\xi_{\lambda}=e^{\Phi}(\delta\mathrm{E}+\sum X_{\lambda}\delta\xi_{\lambda})
+$$
+
+$$
+\begin{gathered}
+\delta\Omega  =(\frac{\partial\Omega}{\partial E})_{\xi}\delta E+\sum_{\lambda}(\frac{\partial\Omega}{\partial\xi_{\lambda}})_{E}\delta\xi_{\lambda} 
+=e^{\phi}(\delta E+\sum_{\lambda}X_{\lambda}\delta\xi_{\lambda})
+\end{gathered}
+$$
+$$
+\delta\ln\Omega=\frac{\delta\Omega}{\Omega}=\frac{\delta E+\sum_{\lambda}X_{\lambda}\delta\xi_{\lambda}}{e^{-\phi}\Omega}
+$$
+
+### 热力学第一定律
+
+对比热一 $\displaystyle T\delta S=\delta Q=\delta E+\delta A$，定义广义力所做的元功 $\displaystyle \delta A=\sum_{\lambda}X_{\lambda}\delta\xi_{\lambda}$，对比可得
+
+$$
+\begin{aligned}e^{-\phi}\Omega=kT\\S=k\ln\Omega+C\end{aligned}
+$$
+
+其中 $k$ 为玻尔兹曼常数， $S$ 为玻尔兹曼熵， $C$ 为任意积分常量。
+[[系综理论#微正则分布]]
+
+## 正则分布与热力学
+
+正则系综的分布函数为
+
+$$
+\begin{array}{c}{\rho=e^{\lambda-1-\beta E}=e^{\beta\phi-\beta E}}\\\end{array}
+$$
+
+令 $\displaystyle \beta \equiv \frac{1}{\theta}$ ，则 $\displaystyle \rho=e^{\frac{\phi-E}{\theta}}$，即 $\displaystyle \ln\rho=\frac{\phi-E}{\theta}$
+对 $\displaystyle \phi-\langle E\rangle=\theta\langle \ln \rho\rangle$ 两边求全变分
+
+$$
+\delta\phi=\delta\langle E\rangle+\langle\ln\rho\rangle\delta\theta+\theta\delta\langle\ln\rho\rangle
+$$
+
+由归一化条件，得 $\displaystyle e^{-\frac{\phi}{\theta}}=\int e^{-\frac{E}{\theta}}d\Omega$，等式两边求全变分
+$$
+e^{-\frac{\phi}{\theta}}(-\frac{\delta\phi}{\theta}+\frac{\phi\delta\theta}{\theta^{2}})=\frac{\delta\theta}{\theta^{2}}\int Ee^{-\frac{E}{\theta}}d\Omega-\frac{1}{\theta}\sum_{\lambda}\delta\xi_{\lambda}\int\frac{\partial E}{\partial\xi_{\lambda}}e^{-\frac{E}{\theta}}d\Omega 
+$$
+整理可得
+$$
+\delta\phi=\frac{\phi-\langle E\rangle}{\theta}\delta\theta+\sum_{\lambda}\langle\frac{\partial E}{\partial\xi_{\lambda}}\rangle\delta\xi_{\lambda}=<ln\rho>\delta\theta+\sum<\frac{\partial E}{\partial\xi_{\lambda}}>\delta\xi_{\lambda}
+$$
+定义广义力做功的平均值为 $\displaystyle \langle A\rangle=\langle X_{\lambda}\rangle=\langle-\frac{\partial E}{\partial\xi_{\lambda}}\rangle$，联立为
+$$
+-\theta\delta\langle\ln\rho\rangle=\delta\langle E\rangle+\delta\langle A\rangle 
+$$
+与热力学第一定律作比较，
+$$
+\begin{aligned}\theta&=kT\\S=-k\langle\ln\rho\rangle+C&=-k\int\rho\ln\rho d\Omega+C\end{aligned}
+$$
+其中 $k$ 为玻尔兹曼常数， $S$ 为吉布斯熵， $C$ 为任意积分常量。
+$$
+\delta\phi=(\ln\rho)\delta\theta-\delta A=-S\delta T-\delta A
+$$
+可与亥姆霍兹自由能的形式 $\displaystyle \delta F=-S\delta T-\delta A\Rightarrow\phi=F+C$
+$$
+\phi=-k_{B}Tlne^{\frac{E}{k_{B}T}}
+$$
+[[系综理论#正则分布]]
+## 配分函数
+正则系综的分布函数可以写为
+$$
+\rho=e^{\lambda-1-\beta E}=\frac{1}{Z}e^{-\beta E}
+$$
+1. 从分布函数的归一化条件 [[#正则分布与热力学]] 来看
+$$
+\begin{aligned}\int\rho d\Omega&=\frac{1}{Z}\int e^{-\beta E}d\Omega=1\\\\Z&=\int e^{-\beta E}d\Omega\end{aligned}
+$$
+2. 从 $Γ$ 空间来看，微观状态数求和
+$$
+\frac{1}{Z}\int\frac{d\Omega}{(\triangle q\triangle p)^{3N}}e^{-\beta E}=1
+$$
+量子力学告诉我们粒子具有全同性，微观状态数乘以 $\displaystyle \frac{1}{N!}$，并且相空间的最小体积元为 $\displaystyle \triangle q\triangle p=h$ 则
+$$
+Z=\int\frac{d\Omega}{N!h^{3N}}e^{-\beta E}
+$$
+3. 从对 $\displaystyle E_{i}$ 求和或积分来定义
+$$
+\frac{1}{Z}\sum q_{i}e^{-\beta E_{i}}=1\Rightarrow Z=\sum q_{i}e^{-\beta E_{i}}
+$$
+连续情况下 $q(E)$ 称为态密度
+## 由配分函数给出热力学量
