--- a/物理学/本科课程/热力学与统计物理/课堂笔记/系综理论.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/系综理论.md
@@ -32,7 +32,7 @@ $$
 即等概率原理 $\rho=\frac{1}{\Omega}$，当系统处于平衡时，如果除能量一定、体积一定和粒子数一定外,没有任何其他的限制，则发现系统处在各微观状态的概率都是相同的。
 
 相空间无穷大其演化的最终结果：热寂说
-### 正则系综
+### 正则分布
 正则系综的宏观条件是系统与大热库（或热库）接触达到平衡。对正则系综，体积与粒子数均保持固定，但系统可以与大热源发生能量交换，因而系统的能量是一个变量，大热源提供了确定的温度。换句话说，系统的内能（能量的期望）和粒子数为常数。因此相比于微正则系综，正则系综的约束条件为：
 $$
 \begin{aligned}\langle E\rangle&=\int E\rho d\Omega=const\\\int\rho d\Omega&=1\end{aligned}
@@ -87,5 +87,5 @@ $$
 #### 多全同粒子
 推广到多种粒子，每种粒子各自全同，更一般的巨正则分布表达式：
 $$
-
+\rho=e^{-k+\sum\nu_{i}N_{i}-\beta E}
 $$
