--- a/物理学/本科课程/热力学与统计物理/课堂笔记/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/由系综到热力学.md
@@ -107,3 +107,48 @@ $$
 $$
 连续情况下 $q(E)$ 称为态密度
 ## 由配分函数给出热力学量
+### 内能
+配分函数 $\displaystyle Z=\int e^{-\beta E}d\Omega$
+$$
+\frac{\partial\ln Z}{\partial\beta}=\frac{\partial\ln Z}{\partial Z}\frac{\partial Z}{\partial\beta}=\frac{1}{Z}\int-Ee^{-\beta E}d\Omega 
+$$
+能量的平均值的形式
+$$
+\langle E\rangle=U=-\frac{\partial\ln Z}{\partial\beta}
+$$
+### 压强
+$$
+\frac{1}{\beta}\frac{\partial\ln Z}{\partial\xi_{\lambda}}=\frac{1}{\beta}\frac{\partial\ln Z}{\partial Z}\frac{\partial Z}{\partial\xi_{\lambda}}=-\frac{1}{Z}\int\frac{\partial E}{\partial\xi_{\lambda}}e^{-\beta E}d\Omega 
+$$
+广义力的平均值的形式 $\displaystyle \langle X_\lambda\rangle=\frac{1}{\beta}\frac{\partial\ln Z}{\partial\xi_\lambda}$，考虑到 
+$\xi_{\lambda}$ 为体积 $V$，广义力为压力 $p$
+$$
+\langle p\rangle=\frac{1}{\beta}\frac{\partial\ln Z}{\partial V}
+$$
+即是一般情况的物态方程，而热力学作为经验的总结是得不到这种一般方程的
+### 熵
+由热力学第一定律可得
+$$
+dS=\frac{1}{T}\Big(d\langle E\rangle+\sum_{\lambda}\langle X_{\lambda}\rangle d\xi_{\lambda}\Big)=k\beta\Big(d\langle E\rangle+\sum_{\lambda}\langle X_{\lambda}\rangle d\xi_{\lambda}\Big)
+$$
+将内能和广义力所做的功代入上式，
+$$
+\begin{aligned}
+\text{dS}& =k\beta\Big(-d\frac{\partial\ln Z}{\partial\beta}+\sum_{\lambda}\frac{1}{\beta}\frac{\partial\ln Z}{\partial\xi_{\lambda}}d\xi_{\lambda}\Big)  \\
+&=k\Big[-d(\beta\frac{\partial\ln Z}{\partial\beta})+\frac{\partial\ln Z}{\partial\beta}d\beta+\sum_{\lambda}\frac{\partial\ln Z}{\partial\xi_{\lambda}}d\xi_{\lambda}\Big] \\
+&=kd\Big(\ln Z-\beta\frac{\partial\ln Z}{\partial\beta}\Big)
+\end{aligned}
+$$
+$$
+S-S_{0}=k\Big(\ln Z-\beta\frac{\partial\ln Z}{\partial\beta}\Big)
+$$
+热力学熵的相对值有意义，$S_{0}=0$，绝对熵 $\displaystyle S=k\Big(\ln Z-\beta\frac{\partial\ln Z}{\partial\beta}\Big)$
+### 自由能
+$$
+\begin{aligned}
+\text{F}& =\langle E\rangle-TS=-\frac{\partial\ln Z}{\partial\beta}-kT\Big(\ln Z-\beta\frac{\partial\ln Z}{\partial\beta}\Big)  \\
+&=-kT\ln Z
+\end{aligned}
+$$
+## 理想气体
+li想气体的哈密顿量
