--- a/物理学/本科课程/热力学与统计物理/课堂笔记/由动力学到统计物理.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/由动力学到统计物理.md
@@ -1,2 +1,11 @@
 
-
+---------
+## 刘维尔方程
+对于自由度为 $s$ 的力学体系，它的微观状态可以用 $2s$ 个变量描述，即 $s$ 个广义坐标和 $s$ 个广义动量 $(q_{1}, · · · , q_{s}, p_{1}, · · · , p_{S})$，某一个确定的微观状态对应于相空间中的一个点，该点随时间的演化遵从哈密顿正则方程：
+$$
+\begin{cases}\dot q_i=\dfrac{\partial H}{\partial p_i}\\\\\dot p_i=-\dfrac{\partial H}{\partial q_i}\end{cases}\quad(i=1,2,\cdots,s)
+$$
+体系在相空间 $\displaystyle \Gamma$ 的演化遵循不可压缩流体的连续性方程
+$$
+\frac{ \partial y }{ \partial x } 
+$$
