--- a/物理学/本科课程/热力学与统计物理/课堂笔记/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/由系综到热力学.md
@@ -1,3 +1,5 @@
+
+-----------
 ## 微正则系综与热力学
 
 ### 变分
@@ -151,4 +153,30 @@ $$
 \end{aligned}
 $$
 ## 理想气体
-li想气体的哈密顿量
+理想气体的哈密顿量 $\displaystyle H=E=\sum_{i=1}^{N}\frac{p_{i}^{2}}{2m}$
+### 配分函数
+$$
+\begin{aligned}
+\text{Z}& =\frac{1}{N!}\int\frac{1}{h^{3N}}e^{-\beta H}d\Omega   \\
+&=\frac{1}{N!}\int\frac{1}{h^{3N}}e^{-\beta\sum_{i=1}^{N}\frac{p_{i}^{2}}{2m}}dqdp
+\end{aligned}
+$$
+对 $dq$ 积分给出 $V^N$，对 $dp_{i}$ 积分给出 $\int_{-\infty}^{\infty}e^{-\beta\frac{p_{i}^{2}}{2m}}dp_{i}=\sqrt{\frac{2\pi m}{\beta}},$
+$$
+Z=\frac{1}{N!}\Big(\frac{V}{h^{3}}\Big)^{N}\Big(\frac{2\pi m}{\beta}\Big)^{3N/2}
+$$
+利用公式 $\displaystyle \lim_{n\to\infty}n!\sim\sqrt{2\pi n}(\frac{n}{e})^n$ 可得
+$$
+Z=\frac{e^N}{\sqrt{2\pi N}}\Big(\frac{V}{Nh}\Big)^N\Big(\frac{2\pi m}{\beta}\Big)^{3N/2}
+$$
+### 系统内能
+$$
+U=\langle E\rangle=-\frac{\partial\ln Z}{\partial\beta}=\frac{3}{2}NkT
+$$
+微正则系综有能均分定理 $\displaystyle \langle E\rangle=E=\frac{3}{2}NkT$
+### 系统压强
+$$
+p=\frac{1}{\beta}\frac{\partial\ln Z}{\partial V}=\frac{NkT}{V}
+$$
+即理想气体状态方程
+
