--- a/物理学/本科课程/热力学与统计物理/课堂笔记/系综理论.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/系综理论.md
@@ -1,3 +1,5 @@
+
+--------
 ## 两个相空间
 ###  $\displaystyle \mu$ 空间与 $\Gamma$ 空间
 微观状态 $x_{i}$ 属于 $\displaystyle \mu$ 空间，由微观状态序列序列 $\displaystyle x_{0},x_{1},x_{2},\cdots,x_{n}$ 可确定微观量 $y_{i}$ ，$\displaystyle x_{0},x_{1},x_{2},\cdots,x_{n}$ 属于 $\Gamma$  空间。
@@ -35,13 +37,13 @@ $$
 ### 正则分布
 正则系综的宏观条件是系统与大热库（或热库）接触达到平衡。对正则系综，体积与粒子数均保持固定，但系统可以与大热源发生能量交换，因而系统的能量是一个变量，大热源提供了确定的温度。换句话说，系统的内能（能量的期望）和粒子数为常数。因此相比于微正则系综，正则系综的约束条件为：
 $$
-\begin{aligned}\langle E\rangle&=\int E\rho d\Omega=const\\\int\rho d\Omega&=1\end{aligned}
+\begin{aligned}\langle E\rangle=\int E\rho d\Omega =const \\
+\int\rho d\Omega =1\end{aligned}
 $$
 构造
 $$
 \begin{aligned}
-&\text{L} =\sigma-\lambda\int\rho d\Omega+\beta\langle E\rangle   \\
-&=\int(\rho\ln\rho+\beta E\rho-\lambda\rho)d\Omega 
+&\text{L} =\sigma-\lambda\int\rho d\Omega+\beta\langle E\rangle=\int(\rho\ln\rho+\beta E\rho-\lambda\rho)d\Omega 
 \end{aligned}
 $$
 等式两边同时求变分
@@ -83,9 +85,11 @@ $$
 $$
 \delta\sum_{N_k}\int(\rho ln\rho-\lambda\rho-\mu N_{k}\rho+\beta E\rho)\delta\Omega=0
 $$
-巨正则系综的分布函数为 $\displaystyle \rho=e^{\lambda-1+\mu N_{k}-\beta E}=e^{-k+\mu N_{k}-\beta E}$
+巨正则系综的分布函数为 $$\displaystyle \rho=e^{\lambda-1+\mu N_{k}-\beta E}=e^{-k+\mu N_{k}-\beta E}$$
 #### 多全同粒子
 推广到多种粒子，每种粒子各自全同，更一般的巨正则分布表达式：
 $$
 \rho=e^{-k+\sum\nu_{i}N_{i}-\beta E}
 $$
+
+
