--- a/物理学/本科课程/热力学与统计物理/课堂笔记/由动力学到统计物理.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/由动力学到统计物理.md
@@ -7,5 +7,35 @@ $$
 $$
 体系在相空间 $\displaystyle \Gamma$ 的演化遵循不可压缩流体的连续性方程
 $$
-\frac{ \partial y }{ \partial x } 
+\frac{\partial\rho}{\partial t}+\sum_{i=1}^N[\frac\partial{\partial q_i}(\dot{q}_i\rho)+\frac\partial{\partial p_i}(\dot{p}_i\rho)]=0
+$$
+$$
+\begin{array}{l}\frac{\partial\dot{q_i}}{\partial q_i}=\frac{\partial^2H}{\partial p_i\partial q_i},\frac{\partial\dot{p_1}}{\partial p_i}=-\frac{\partial^2H}{\partial p_i\partial q_i}\\\frac{\partial\rho}{\partial t}+\sum(\dot{q}_i\frac{\partial\rho}{\partial q_i}-\dot{p_i}\frac{\partial\rho}{\partial p_i})=0\end{array}
+$$
+#### 结论
+刘维尔方程中
+1. $\displaystyle {\frac{d\rho}{dt}}=0$ 刘维尔定理：系综的分布函数在运动中保持不变
+2. 系综的运动具有时间反演不变性
+3. $\displaystyle {\frac{dS}{dt}}=0$ 哈密顿系统的熵保持不变
+4. Poincaré 回归现象。在任何一个封闭系统中，任何一个粒子在经过足够长的时间后都会无限接近其初始位置。
+
+## 统计物理的基本假设
+### 遍历性假设
+遍历性假说又叫做各态遍历假说，是历史上玻尔兹曼为了把统计物理完全建立在动力学基础上而提出的，它可以表述为：对于孤立的保守体系，只要经过足够长的时间，从任一初态出发，都将经过能量曲面上的一切微观状态，即相空间上的任何一点都可以被一条相轨道所遍历。然而遍历性假说在数学上已经被证明不成立，因为对于高维相空间，零测度的相轨道不可能跑遍整个高维相空间。
+### 混合性假设
+混合性假设又称准各态遍历解说，是由玻尔兹曼的学生埃伦费斯特提出的一个放松一些要求的前腿假设，它可以表述为：一个力学系统在足够长的时间运动中，相轨道可以无限接近于能量曲面上的任何点。然而，混合性假设也被证明是不成立的。
+### 等概率原理
+等概率原理即一个孤立系统，设有 dΩ1 和 dΩ2 两个相体积，如果它们相等，则相轨迹通过它们的概率相等。在前面的系综理论中，我们曾通过微正则系综推出了等概率原理，因此等概率原理与微正则系综等价，都是统计物理中非常重要的一条假设。
+
+定义力学量的长时间平均
+$$
+\tilde{A}(q(t),p(t))\equiv\lim_{T\to\infty}\frac{1}{T}\int_{0}^{T}A(q(t),p(t))\mathrm{d}t
+$$
+系综平均为
+$$
+ \langle A \rangle \equiv\int A(q,p)\rho d\Omega 
+$$
+上述假设成立时，长时间平均与系综平均相等
+$$
+\bar{A}(q(t),p(t))=\langle A\rangle 
 $$
