--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/费米——狄拉克分布.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/费米——狄拉克分布.md
@@ -10,14 +10,30 @@
 ### $\displaystyle N$ 个粒子分布
 利用高中所学挡板分割的概率模型，由于这 $\displaystyle N$ 个粒子不可区分，两档板之间粒子数不定，最左侧必为挡板，考虑**存在** $\displaystyle N$ 个粒子之间的相互交换，**不存在**同一能级的 $n_{i}$ 个粒子，得概率分布：
 $$
-\Omega_{F.D.}=\omega_{F.D.}(n_{1},n_{2},\cdots)=\prod_{l}\frac{g_{i}!}{n_{i}!(g_{i}-n_{i})!}
+\Omega_{F.D.}=\omega_{F.D.}(n_{1},n_{2},\cdots)=\prod_{i}\frac{g_{i}!}{n_{i}!(g_{i}-n_{i})!}
 $$
 
 $$
 \delta ln\Omega_{F.D.}=\Sigma \left[ g_{i} \ln(g_i)-n_i\ln n_i-(g_{i}-n_i)\ln(g_{i}-n_i)\right]=0
 $$
 
- 可得
+ 平衡状态下要求 $\displaystyle \omega_{F.D.}$ 最大，$\displaystyle \ln \omega_{F.D.}=0$，约束 $\displaystyle \sum \xi _{i} \delta n_{i}=0$ ，$\displaystyle \delta n _{i}=0$，利用拉格朗日方程同样可得：
 $$
 n_{i}=\frac{g_{i}}{e^{ \alpha+\beta \xi _{i} }+1}
+$$
+## 玻色子与费米子
+玻色子与费米子合写为：
+$$
+n_{i}=\frac{g_{i}}{e^{ \alpha+\beta \xi _{i} }\pm1}
+$$
+若 $\displaystyle e^{ \alpha }\gg 1\implies \frac{n_{i}}{g_{i}} \ll 1$ ，对应该能级 $\displaystyle \xi _{i}$ 上状态数很大，则得经典统计极限：
+$$
+n_{i}^{M.B.}=n_{i}^{B.E.}=n_{i}^{F.D.}
+$$
+但出现吉布斯详谬：
+$$
+\Omega_{M.B.}\ne \Omega_{B.E.}=\Omega_{F.D.}
+$$
+$$
+\frac{\Omega_{M.B.}}{N!}= \Omega_{B.E.}=\Omega_{F.D.}
 $$
