--- a/物理学/本科课程/热力学与统计物理/热力学与统计物理.md
+++ b/物理学/本科课程/热力学与统计物理/热力学与统计物理.md
@@ -1,9 +1,13 @@
 
 
 -----
-
+## 统计物理基础
 1. [[统计物理的概率描述]]
 2. [[系综理论]]
 3. [[由系综到热力学]]
 4. [[由动力学到统计物理]]
-5. [[麦克斯韦——玻尔兹曼统计]]
+
+## 统计物理的动理学
+1. [[麦克斯韦——玻尔兹曼统计]]
+2. [[玻色——爱因斯坦统计]]
+3. [[费米——狄拉克分布]]
