--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/统计物理的概率描述.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/统计物理的概率描述.md
@@ -83,10 +83,11 @@ $$
 $$
 \left\{\begin{array}{l}\vec{y_1}=(x_0,x_1,x_2,\cdots,x_p)^T\\\vec{y_2}=(x_1,\cdots,x_{p+1})^T\\\vec{y_3}=(x_2,\cdots,x_{p+2})^T\\\vdots\\\vec{y_i}=(x_i,\cdots,x_{p+i})^T\end{array}\right.
 $$
- $\displaystyle \mu$ 空间，即 $x_{i}$ 的空间。
+ $\displaystyle \mu$ 空间，即 $x_{i}$ 的空间，粒子在某一时刻的力学运动状态可以用 $\displaystyle \mu$ 空间中一点表示。
 ### 宏观变量与 $\Gamma$ 空间
 统计物理给出了 $\Gamma$ 空间，即 $y_{i}$ 的空间，
-并再其中定义了宏观量，如
+并在其中定义了宏观量，物质的宏观特性是大量微观粒子行为的集体表现，宏观物理量是相应微观物理量的统计平均值。
+如：
 $$
 \begin{gathered}
 A_{i}(\vec{y}_{i}) =\frac{1}{p}\sum_{n=1}^{p}x_{n+i}^{2} \\
