--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
@@ -51,4 +51,6 @@ $$
 \phi_{v}=\frac{n_{v}\xi_{v}}{V}=\frac{8\pi v^2\xi_{v}}{3C^3(e^{ \beta \xi _{i} }-1)}=\frac{8\pi h v^3}{C^3(e^{ hv/k_{B}T }-1)}
 $$
 
-
+**注意**：
+黑体系统中光子数不守恒会引起态密度的差别
+参见[[自由粒子运动状态的量子描述]]
