--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
@@ -48,7 +48,30 @@ Nv=\frac{\frac{8\pi k^3}{3}}{\left( \frac{2\pi n}{L} \right)^3}=\frac{8\pi L^3R^
 $$
 $\displaystyle d Nv=g_{v}dv \implies n_{v}=\frac{g_v}{e^{ \beta \xi _{i} }-1}$ 得能量密度为：
 $$
-\phi_{v}=\frac{n_{v}\xi_{v}}{V}=\frac{8\pi v^2\xi_{v}}{3C^3(e^{ \beta \xi _{i} }-1)}=\frac{8\pi h v^3}{C^3(e^{ hv/k_{B}T }-1)}
+\phi_{v}=\frac{n_{v}\epsilon_{v}}{V}=\frac{8\pi v^2\epsilon{v}}{3c^3(e^{ \beta \epsilon_{i} }-1)}=\frac{8\pi h v^3}{c^3(e^{ hv/k_{B}T }-1)}
+$$
+### 斯忒藩定律
+$$
+\phi=\sigma T^4=\int\limits_{0}^{\infty}\phi_{\nu}d \nu=
+\int\limits_{0}^{\infty}\frac{8\pi h v^3}{C^3(e^{ hv/k_{B}T }-1)}d \nu
+$$
+令 $\displaystyle y=\frac{h\nu}{k_{B}T}$ 并对 $\displaystyle y$ 做积分，可得 $\displaystyle \sigma$ 表达式为：
+$$
+\sigma = \frac{8\pi^5k_{B}^4}{15c^3h^3}
+$$
+## 近似黑体辐射分布
+### 瑞利——金斯分布
+近似条件：$\displaystyle \frac{h\nu}{k_{B}T}\ll 1$，黑体辐射表达式化简为：
+$$
+\phi_{\nu}=\frac{8\pi \nu^2k_{B}T}{c^3}
+$$
+#### 紫外灾难
+当高频情况时，能量发散，辐射爆表
+
+### 维恩公式
+近似条件：$\displaystyle \frac{h\nu}{k_{B}T}\gg 1$，黑体辐射表达式化简为：
+$$
+\phi_{\nu}=\frac{8\pi \nu^3h}{c^3}e^{ -\frac{h\nu}{k_{b}T} }
 $$
 
 **注意**：
