--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
@@ -40,29 +40,30 @@ $\displaystyle n$ 个粒子进入 $\displaystyle \omega _{i}$ 的概率为 $\dis
  $$\displaystyle \begin{align}
 \sum n_{i}=N \implies \sum \delta n_{i}=0 \\ \\
 \\
- \sum n_{i}\xi _{i}=E \implies \sum \xi _{i}\delta n_{i}=0
+ \sum n_{i}\epsilon _{i}=E \implies \sum \epsilon _{i}\delta n_{i}=0
 \end{align} $$
  利用[[ stirling 公式]] $\displaystyle \ln N! = N \ln N-N$ ，由拉格朗日乘子法得 #疑问 
  $$
-\displaystyle \delta \ln \omega = \sum \left(\ln \frac{g_{i}}{n_{i}} \delta n _{i}\right)=0
+\displaystyle \delta \ln \omega-\alpha \delta N-\beta \delta E= \sum \left(\ln \frac{g_{i}}{n_{i}} \delta n _{i}+\alpha+\beta\epsilon _{i}\right)=0
 $$
  $$
-\displaystyle  \sum \left(\ln \frac{g_{i}}{n_{i}}+\alpha-\beta \xi_{i}\right)=0
+\displaystyle  \sum \left(\ln \frac{g_{i}}{n_{i}}+\alpha-\beta \epsilon_{i}\right)=0
 $$
+系数 $\displaystyle \alpha,\beta$ 由守恒条件确定。
 即得麦克斯韦——玻尔兹曼分布：
 $$
 n_{i} = g_{i}e^{ \alpha-\beta e_{i} }
 $$
 由归一化得配分函数 $\displaystyle Z$
 $$
-Z=\sum q_{i} e^{-\beta \xi _{i}}
+Z=\sum q_{i} e^{-\beta \epsilon _{i}}
 $$
 注意到 $\displaystyle N = e^{ \alpha }Z$ ，则
 $$
-n_{i}=\frac{N}{Z}g_{i}e^{ -\beta \xi _{i}} =-\frac{N}{\beta}\frac{ \partial Z }{ \partial \xi _{i} } 
+n_{i}=\frac{N}{Z}g_{i}e^{ -\beta \epsilon _{i}} =-\frac{N}{\beta}\frac{ \partial Z }{ \partial \epsilon _{i} } 
 $$
 $$
-\left\langle  \xi _{i}\right\rangle =\frac{E}{N}= \frac{1}{N}\sum n_{i}\xi _{i}=\frac{1}{Z}\sum g_{i}\xi _{i}e^{ -\beta \xi _{i} } =-\frac{ \partial \ln Z }{ \partial \beta }
+\left\langle  \epsilon _{i}\right\rangle =\frac{E}{N}= \frac{1}{N}\sum n_{i}\epsilon _{i}=\frac{1}{Z}\sum g_{i}\epsilon _{i}e^{ -\beta \epsilon _{i} } =-\frac{ \partial \ln Z }{ \partial \beta }
 $$
 由于 #疑问 
 $$
@@ -72,7 +73,7 @@ $$
 \ln \omega |_{max}=N\ln Z+\beta E
 $$
 $$
-\xi _{i} = V(x_{i})+\frac{1}{2}mV_{i}^2
+\epsilon _{i} = V(x_{i})+\frac{1}{2}mV_{i}^2
 $$
 得出**玻尔兹曼分布**
 $$
@@ -80,11 +81,11 @@ n_{i}=\frac{N}{Z}g_{i}e^{ \frac{-1}{K_{B}T}\left( V(x_{i})+\frac{1}{2}mV_{i}^2 \
 $$
 ### 量子 $\displaystyle \mu$ 空间 
 单粒子态：
-能级：$\displaystyle \xi_{1},\xi_{2},\xi_{3},\cdots \xi_{i}$
+能级：$\displaystyle \epsilon_{1},\epsilon_{2},\epsilon_{3},\cdots \epsilon_{i}$
 简并态：$\displaystyle g_{1},g_{2},g_{3},\cdots g_{i}$
 
 将同一能级的 $n_{i}$ 个粒子放入相格的概率为 $\displaystyle \prod(g_{i})^{n_{i}}$ ，考虑**存在** $\displaystyle N$ 个粒子之间的相互交换，**不存在**同一能级的 $n_{i}$ 个粒子之间的相互交换，总微观状态数为：
 $$
-\displaystyle \omega(n_{1},n_{2},\cdots) = \frac{N!}{\prod n_{i}!}\prod(g_{i})^{n_{i}}\implies n_{i} = g_{i}e^{ \alpha-\beta e_{i} }
+\displaystyle \omega(n_{1},n_{2},\cdots) = \frac{N!}{\prod n_{i}!}\prod(g_{i})^{n_{i}}\implies n_{i} = g_{i}e^{ \alpha-\beta \epsilon_{i} }
 $$
 
