--- a/物理学/本科课程/热力学与统计物理/课堂笔记/补充/自由粒子运动状态的量子描述.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/补充/自由粒子运动状态的量子描述.md
@@ -14,4 +14,21 @@ $$
 
 ## 相格内自由粒子可能的状态数
 
-在 $\displaystyle p_{x}$ 到 $\displaystyle p_{x}+dp_{x}$ 的范围内，可能的 $p_{x}$ 的数目为 $$\displaystyle $\mathrm{d}n_{x}=\frac{L}{2\pi\hbar}\mathrm{d}p_{x}$$
+在 $\displaystyle p_{x}$ 到 $\displaystyle p_{x}+dp_{x}$ 的范围内，可能的 $p_{x}$ 的数目为 $$\displaystyle \mathrm{d}n_{x}=\frac{L}{2\pi\hbar}\mathrm{d}p_{x}$$
+ 体积为 $\displaystyle V=L^3$ 的空间内自由粒子的量子态数：$$\mathrm{d}n_{x}\mathrm{d}n_{y}\mathrm{d}n_{z}=\left (\frac{L}{2\pi\hbar}\right)^{3}\mathrm{d}p_{x}\mathrm{d}p_{y}\mathrm{d}p_{z}=\frac{V}{h^{3}}\mathrm{d}p_{x}\mathrm{d}p_{y}\mathrm{d}p_{z}
+$$
+## 动量空间的球极坐标
+$$
+\begin{aligned}p_x&=p\sin\theta\cos\varphi\\p_y&=p\sin\theta\sin\varphi\\p_z&=p\cos\theta\end{aligned}
+$$
+
+动量空间的体积元为 $\displaystyle p^{2}\sin\theta\mathrm{d}p\mathrm{d}\theta\mathrm{d}\varphi$，由 $\displaystyle \int_{0}^{2\pi}\mathrm{d}\varphi\int_{0}^{\pi}\sin\theta\mathrm{d}\theta=4\pi$ ，自由粒子可能的状态数为：
+$$
+\frac{Vp^2\sin\theta\mathrm{d}p\mathrm{d}\theta\mathrm{d}\varphi}{h^3}=\frac{4\pi V}{h^3}p^2\mathrm{d}p
+$$
+又由 $\displaystyle \varepsilon=\frac{p^2}{2m}$ ，$\displaystyle D\left(\varepsilon\right)$ 表示单位能量间隔内的可能状态数，称为态密度。能量范围内，自由粒子可能的状态数为：
+$$
+D\left(\varepsilon\right)\mathrm{d}\varepsilon=\frac{2\pi V}{h^{3}}(2m)^{3/2}\varepsilon^{1/2}\mathrm{d}\varepsilon 
+$$
+
+
