--- a/物理学/本科课程/热力学与统计物理/课堂笔记/补充/近独立系统.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/补充/近独立系统.md
@@ -1,5 +1,8 @@
 ## 定义
-大量粒子组成的热力学系统，且忽略粒子间的力学相互作用，不同粒子间可以看作是近独立的。
+大量粒子组成的热力学系统，且忽略粒子间的力学相互作用，不同粒子间可以看作是近独立的。在由近独立粒子组成的系统中，粒子之间的相互作用很弱，相互作用的平均能量远小于单个粒子的平均能量，因而可以忽略粒子之间的相互作用，将整个系统的能量表达为单个粒子的能量之和：
+$$
+E=\sum_{i=1}^{N}\varepsilon_{i}
+$$
 
 ## 举例
 比如**理想气体**是近独立子系，除了粒子间的碰撞，其他力学相互作用可以忽略。而**范德瓦尔斯气体**不是近独立子系，因为两个范德瓦尔斯气体分子之间存在范德瓦尔斯力。**金属中的自由电子气体**常常可以看作是近独立子系，这是因为晶格的屏蔽效应使得自由电子之间的库仑相互作用可以忽略。
