--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
@@ -21,7 +21,7 @@ $$
 Z=\int e^{ -\beta\epsilon }\frac{dxdydzdp_{x}dp_{y}dp_{z}}{h^3}
 $$
 
-## 热力学量的导出
+### 热力学量的导出
 
 $$
 N=e^{\alpha }Z,\quad n_{i}=-\frac{N}{\beta}\frac{ \partial \ln Z }{ \partial \epsilon _{i} } 
@@ -29,7 +29,7 @@ $$
 $$
 \left< E \right> = U=-N\frac{ \partial \ln Z }{ \partial \beta }  
 $$
-### 广义力
+#### 广义力
 广义坐标 $\displaystyle y_{i}$，势能 $\displaystyle U\left( x \right)=\frac{kx^2}{2}$，得能量 $\displaystyle \epsilon_{i}\left( y_{1},y_{2},\cdots \right)$
 广义力：
 $$
@@ -52,7 +52,7 @@ $$
 \implies \beta=\frac{1}{k_{B}T}
 $$
 
-### 熵
+#### 熵
 $$
 S=Nk_{B}
 $$
@@ -62,11 +62,67 @@ $$
 $$
 $$
 Z=\int \frac{dxdydzdp_{x}dp_{y}dp_{z}}{h^3}e^{ -\beta \left( \frac{p_{x}^2}{2m}+\frac{p_{y}^2}{2m}+\frac{p_{z}^2}{2m}  \right)}=V \left( \frac{2\pi m}{h^2\beta} \right)^{\frac{3}{2}}$$
-### 能均分定理
+#### 能均分定理
 $$
-\left< \frac{p_{x}^2}{2m} \right> =  
+\left< \frac{p_{x}^2}{2m} \right> =\frac{1}{2}k_{B}T
 $$
 $$
-V=\left< E \right> =-N \frac{ \partial \ln Z }{ \partial \beta }=-\frac{3N}{2}k_{B}T 
+U=\left< E \right> =-N \frac{ \partial \ln Z }{ \partial \beta }=-\frac{3N}{2}k_{B}T 
 $$
-#疑问 
+
+等压热容
+$$
+C_{V}=\left(  \frac{ \partial U }{ \partial T }\right)_{V} =\frac{3}{2}k_{B}T 
+$$
+定义 GAMMA $$\displaystyle \gamma=\frac{C_{p}}{C_{v}}=\frac{5}{3}$$
+
+## 双原子理想气体
+### 哈密顿量
+哈密顿量=平动动能+转动动能+振动动能 
+$$
+H=\frac{1}{2m}\left( p_{x}^2+p_{y}^2+p_{z}^2 \right) +\frac{1}{2I} \left( p_{0}^2+\frac{1}{\sin^2\theta}p_{f}^2 \right)+\frac{1}{2m_{\mu}}\left( p_{r}^2+m_{\mu}^2\omega^2r^2 \right)
+$$
+其中等效质量 $\displaystyle m_{\mu}=\frac{m_{1}m_{2}}{m_{1}+m_{2}}$ ，转动惯量 $\displaystyle I=m_{\mu}r^2$
+### 玻尔兹曼分布
+$$
+Z_{平}=V\left( \frac{2\pi m}{h^2\beta} \right)^{\frac{3}{2}} 
+$$
+$$
+Z_{转}=\frac{8\pi^2I}{h^2\beta}
+$$
+$$
+Z_{振}=\frac{2\pi}{h\beta\omega} 
+$$
+由势能项 $\displaystyle U=\left< E \right> =-N \frac{ \partial \ln Z }{ \partial \beta }$
+$$
+U_{平}=\frac{3}{2}k_{B}TN,~U_{转}=k_{B}TN,~U_{振}=k_{B}TN
+$$
+平动自由度为 3，
+[[能均分定理]]每个自由度上为 $\displaystyle \frac{1}{2}k_{B}T$
+
+### 热容
+$$
+C_{V}=\frac{7}{2}k_{B}
+$$
+由热力学公式 $\displaystyle C_{p}-C_{V}=k_{B}$，得 $\displaystyle \frac{C_{p}}{C_{V}}=1.28$ ，实验结果符合较差。若振动没有被激发 $\displaystyle \frac{C_{p}}{C_{V}}=1.4$，实验结果比较符合。
+
+### 量子描述
+能量分立化 $\displaystyle \epsilon_{n}=\left( n+\frac{1}{2} \right)\hbar \omega\quad n=0,1,2\cdots$
+转子简并度 $\displaystyle g_{i}=2l+1$，异核状态：
+$$
+\epsilon=\frac{l(l+1)\hbar^3}{2I}\quad l=0,1,2\cdots
+$$
+$\displaystyle Z=Z^{平}Z^{转}Z^{振}$ 平动部分不需量子化 #疑问 
+$$
+Z^{转}=\sum_{n=0}^{\infty}e^{ -\beta \hbar \omega(n+\frac{1}{2}) }\implies e^{ -\beta\epsilon _{i} }
+$$
+理论上应用玻尔兹曼分布，近似为使用玻色分布，利用公式 $\displaystyle 1+x+x^2+x^3+\cdots=\frac{1}{1-x}$
+$$
+Z^{转}=\frac{e^{ -\beta \hbar \omega\frac{1}{2}}}{1-e^{ -\beta \hbar \omega}}
+$$
+$$
+U^{振}=-N\frac{ \partial Z^{振} }{ \partial \beta }=\frac{N\hbar\omega}{2}+\frac{N\hbar\omega}{-1+e^{\beta \hbar \omega}} 
+$$
+$$
+C^{振}=\left( \frac{ \partial U }{ \partial T }  \right)_{V}=Nk_{B}\left( \frac{\hbar\omega}{k_{B}T} \right)^2 \frac{e^{ \frac{\hbar\omega}{k_{B}T}}}{(-1+e^{\frac{\hbar\omega}{k_{B}T}})^2}
+$$
