--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
@@ -26,9 +26,9 @@ $$
 n_{i}=g_{i}e^{ -(\alpha+\beta \xi _{i}+1) }
 $$
 ## 黑体辐射和普朗克分布
-黑体系统中光子数不守恒，去掉该约束后：
+黑体系统中光子数不守恒，令 $\displaystyle \alpha=0$ 从而去掉该约束后：
 $$
-\sum\left[ \ln\left(g_{i}+n_{i}\right) -\ln n_{i}-\alpha -\beta \xi _{i}\right]\delta _{i} =0 
+\sum\left[ \ln\left(g_{i}+n_{i}\right) -\ln n_{i} -\beta \xi _{i}\right]\delta _{i} =0 
 $$
 得到普朗克分布：（可将能量与频率连续化得光子数密度 $\displaystyle g_{i}\to g_{v}\quad n_{i} \to n_{v}$）
 $$
