--- a/物理学/本科课程/热力学与统计物理/热力学与统计物理.md
+++ b/物理学/本科课程/热力学与统计物理/热力学与统计物理.md
@@ -11,7 +11,11 @@
 1. [[麦克斯韦——玻尔兹曼统计]]
 2. [[玻色——爱因斯坦统计]]
 3. [[费米——狄拉克分布]]
+4. [[理想气体]]
+5. [[三种分布对比]]
 
 ## 补充
-1.[[近独立系统]]
-2.[[自由粒子运动状态的量子描述]]
+- [[近独立系统]]
+- [[自由粒子运动状态的量子描述]]
+- [[全同]]
+- 
