--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理基础/由系综到热力学.md
@@ -180,3 +180,20 @@ p=\frac{1}{\beta}\frac{\partial\ln Z}{\partial V}=\frac{NkT}{V}
 $$
 即理想气体状态方程
 
+## 涨落
+随机序列 $\displaystyle x_{0},x_{1},x_{2},\cdots,x_{n}$ 
+$\left< x \right> =C$ 类似得高阶矩 $\displaystyle \left< x^2 \right>\left< x^3 \right>$ ，定义力学量如下：
+$$
+A\left< p_{i},q_{i} \right>=A_{i}\quad \left<  A_{i}\right>  =C
+$$
+定义涨落为
+$$
+\left< \left( A_{i}-\left< A_{i} \right>  \right)^2  \right> =\left< A_{i}^2 \right> -\left< A_{i} \right> ^2
+$$
+在[[系综理论#正则分布]]下
+$$
+\frac{\overline{\partial E}}{\partial\beta}=\frac{\partial}{\partial\beta}\frac{\sum_sE_s\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}}=-\frac{\sum_sE_s^2\operatorname{e}^{-\beta E_s}}{\sum_s\operatorname{e}^{-\beta E_s}}+\frac{\left(\sum_sE_s\operatorname{e}^{-\beta E_s}\right)^2}{\left(\sum_s\operatorname{e}^{-\beta E_s}\right)^2}=-\left[\overline{E^2}-(\overline{E})^2\right]
+$$
+$$
+\overline{(E-\overline{E})^2}=-\frac{\partial\overline{E}}{\partial\beta}=kT^2\frac{\partial\overline{E}}{\partial T}=kT^2C_{V}
+$$
