--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
@@ -80,19 +80,21 @@ $$
 ### 哈密顿量
 哈密顿量=平动动能+转动动能+振动动能 
 $$
-H=\frac{1}{2m}\left( p_{x}^2+p_{y}^2+p_{z}^2 \right) +\frac{1}{2I} \left( p_{0}^2+\frac{1}{\sin^2\theta}p_{f}^2 \right)+\frac{1}{2m_{\mu}}\left( p_{r}^2+m_{\mu}^2\omega^2r^2 \right)
+H=\frac{1}{2m}\left( p_{x}^2+p_{y}^2+p_{z}^2 \right) +\frac{1}{2I} \left( p_{\theta}^2+\frac{1}{\sin^2\theta}p_{\varphi}^2 \right)+\frac{1}{2m_{\mu}}\left( p_{r}^2+m_{\mu}^2\omega^2r^2 \right)
 $$
-其中等效质量 $\displaystyle m_{\mu}=\frac{m_{1}m_{2}}{m_{1}+m_{2}}$ ，转动惯量 $\displaystyle I=m_{\mu}r^2$
+其中等效质量 $\displaystyle m_{\mu}=\frac{m_{1}m_{2}}{m_{1}+m_{2}}$ ，转动惯量 $\displaystyle I=m_{\mu}r^2$ 
 ### 玻尔兹曼分布
 $$
-Z_{平}=V\left( \frac{2\pi m}{h^2\beta} \right)^{\frac{3}{2}} 
+Z_{平}=V\left( \frac{2\pi m}{h^2\beta} \right)^{\frac{3}{2}}\sim \beta^{-\frac{3}{2}}
 $$
 $$
-Z_{转}=\frac{8\pi^2I}{h^2\beta}
+Z_{转}=\frac{8\pi^2I}{h^2\beta}\sim \beta^{-1}
 $$
 $$
-Z_{振}=\frac{2\pi}{h\beta\omega} 
+
+Z_{振}=\frac{2\pi}{h\beta\omega} \sim \beta^{-1}
 $$
+
 由势能项 $\displaystyle U=\left< E \right> =-N \frac{ \partial \ln Z }{ \partial \beta }$
 $$
 U_{平}=\frac{3}{2}k_{B}TN,~U_{转}=k_{B}TN,~U_{振}=k_{B}TN
@@ -102,23 +104,24 @@ $$
 
 ### 热容
 $$
-C_{V}=\frac{7}{2}k_{B}
+C_{V}=\frac{7}{2}k_{B}\quad C_{p}=\frac{9}{2}k_{B}
 $$
 由热力学公式 $\displaystyle C_{p}-C_{V}=k_{B}$，得 $\displaystyle \frac{C_{p}}{C_{V}}=1.28$ ，实验结果符合较差。若振动没有被激发 $\displaystyle \frac{C_{p}}{C_{V}}=1.4$，实验结果比较符合。
 
 ### 量子描述
-能量分立化 $\displaystyle \epsilon_{n}=\left( n+\frac{1}{2} \right)\hbar \omega\quad n=0,1,2\cdots$
+谐振子能量分立化 
+$$\displaystyle \epsilon_{n}=\left( n+\frac{1}{2} \right)\hbar \omega\quad n=0,1,2\cdots$$
 转子简并度 $\displaystyle g_{i}=2l+1$，异核状态：
 $$
-\epsilon=\frac{l(l+1)\hbar^3}{2I}\quad l=0,1,2\cdots
+\epsilon_{l}=\frac{l(l+1)\hbar^2}{2I}\quad l=0,1,2\cdots
 $$
 $\displaystyle Z=Z^{平}Z^{转}Z^{振}$ 平动部分不需量子化 #疑问 
 $$
-Z^{转}=\sum_{n=0}^{\infty}e^{ -\beta \hbar \omega(n+\frac{1}{2}) }\implies e^{ -\beta\epsilon _{i} }
+Z^{振}=\sum_{n=0}^{\infty}e^{ -\beta \hbar \omega(n+\frac{1}{2}) }\implies e^{ -\beta\epsilon _{i} }
 $$
-理论上应用玻尔兹曼分布，近似为使用玻色分布，利用公式 $\displaystyle 1+x+x^2+x^3+\cdots=\frac{1}{1-x}$
+理论上应用玻尔兹曼分布，近似为使用玻色分布，利用公式 $\displaystyle 1+x+x^2+x^3+\cdots=\frac{1}{1-x}\quad \left| x \right|< 1$
 $$
-Z^{转}=\frac{e^{ -\beta \hbar \omega\frac{1}{2}}}{1-e^{ -\beta \hbar \omega}}
+Z^{振}=\frac{e^{ -\beta \hbar \omega\frac{1}{2}}}{1-e^{ -\beta \hbar \omega}}
 $$
 $$
 U^{振}=-N\frac{ \partial Z^{振} }{ \partial \beta }=\frac{N\hbar\omega}{2}+\frac{N\hbar\omega}{-1+e^{\beta \hbar \omega}} 
@@ -126,3 +129,4 @@ $$
 $$
 C^{振}=\left( \frac{ \partial U }{ \partial T }  \right)_{V}=Nk_{B}\left( \frac{\hbar\omega}{k_{B}T} \right)^2 \frac{e^{ \frac{\hbar\omega}{k_{B}T}}}{(-1+e^{\frac{\hbar\omega}{k_{B}T}})^2}
 $$
+零点振动能不参与其中
