--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/费米——狄拉克分布.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/费米——狄拉克分布.md
@@ -1,7 +1,7 @@
 
 -----
 
-## 费米——狄拉克分布
+## 费米分布
 能级：$\displaystyle \xi_{1},\xi_{2},\xi_{3},\cdots \xi_{i}$
 简并态：$\displaystyle g_{1},g_{2},g_{3},\cdots g_{i}$
 
