--- a/物理学/本科课程/热力学与统计物理/课堂笔记/补充与详述/自由粒子运动状态的量子描述.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/补充与详述/自由粒子运动状态的量子描述.md
@@ -26,7 +26,7 @@ $$
 $$
 \frac{Vp^2\sin\theta\mathrm{d}p\mathrm{d}\theta\mathrm{d}\varphi}{h^3}=\frac{4\pi V}{h^3}p^2\mathrm{d}p
 $$
-又由 $\displaystyle \varepsilon=\frac{p^2}{2m}$ ，$\displaystyle D\left(\varepsilon\right)$ 表示单位能量间隔内的可能状态数，称为态密度。能量范围内，自由粒子可能的状态数为：
+又由 $\displaystyle \varepsilon=\frac{p^2}{2m}$ ，$\displaystyle D\left(\varepsilon\right)$ 表示单位能量间隔内的可能状态数，称为态密度。能量范围内，不考虑自旋的自由粒子可能的状态数为：
 $$
 D\left(\varepsilon\right)\mathrm{d}\varepsilon=\frac{2\pi V}{h^{3}}(2m)^{3/2}\varepsilon^{1/2}\mathrm{d}\varepsilon 
 $$
