--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
@@ -32,7 +32,7 @@ $$
 
 每个相格内粒子数：$\displaystyle n_{1},n_{2},n_{3},\cdots n_{i}\quad (\sum_{i} n_{i}=N)$
 $\displaystyle n$ 个粒子进入 $\displaystyle \omega _{i}$ 的概率为 $\displaystyle (g_{i})^{n_{i}}$，每相格实际存在粒子数的出现序列 $\displaystyle n_{1},n_{2},\cdots$ 的概率为 $\displaystyle \omega(n_{1},n_{2},\cdots)$，将 $n_{i}$ 个粒子放入相格的概率为 $$\displaystyle \omega(n_{1},n_{2},\cdots) \implies \prod(g_{i})^{n_{i}}$$
-由于同一个相格内部 $\displaystyle n_{i}$ 个粒子微观状态具有全同性，以及考虑 $N$ 个粒子在各自内部交换给出 $N!$ 个排列，概率概率修正为下式： $$\displaystyle \omega(n_{1},n_{2},\cdots) = \frac{N!}{\prod n_{i}!}\prod(g_{i})^{n_{i}}$$
+由于同一个相格内部 $\displaystyle n_{i}$ 个粒子微观状态具有全同性，内部交换不变；以及考虑 $N$ 个粒子各自交换给出 $N!$ 个排列，概率概率修正为下式： $$\displaystyle \omega(n_{1},n_{2},\cdots) = \frac{N!}{\prod n_{i}!}\prod(g_{i})^{n_{i}}$$
 注意 $\displaystyle \sum \omega(n_{1},n_{2},\cdots)=1$
  
  ## 玻尔兹曼分布
