--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/三种分布对比.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/三种分布对比.md
@@ -40,3 +40,19 @@ $$
 &\approx\prod_{i}\frac{g_{i}^{n_{i}}}{n_{i}!}=\frac{\Omega_{\mathrm{M.B.}}}{N!}
 \end{aligned}
 $$
+对于那些**直接由分布函数导出的热力学量**（例如内能、物态方程），两者具有相同的统计表达式。然而，对于例如熵和自由能等与微观状态数有关的热力学量，两者的统计表达式有差异。
+
+## 最概然分布
+
+- [[麦克斯韦——玻尔兹曼统计#玻尔兹曼分布]]
+$$
+n_{i} = g_{i}e^{ \alpha-\beta e_{i} }
+$$
+- [[玻色——爱因斯坦统计#玻色子分布]]
+$$
+n_{i}=\frac{g_{i}}{e^{ \alpha+\beta \xi _{i} }-1}
+$$
+- [[费米——狄拉克分布#费米分布]]
+$$
+n_{i}=\frac{g_{i}}{e^{ \alpha+\beta \xi _{i} }+1}
+$$
