--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/玻色——爱因斯坦统计.md
@@ -1,4 +1,4 @@
-## 玻色子分布
+ ## 玻色子分布
 
 能级：$\displaystyle \xi_{1},\xi_{2},\xi_{3},\cdots \xi_{i}$
 简并态：$\displaystyle g_{1},g_{2},g_{3},\cdots g_{i}$
@@ -14,7 +14,7 @@ $$
 ln\Omega_{B.E.}=\Sigma \left[  \ln(g_i+n_i-1)!-\ln n_i!-\ln(g_{i}-1)!\right]
 $$
 
-由 [[stirling 公式]]：$lnm!\approx m(lnm-1)$ 
+由 [[stirling 公式]]：$lnm!\approx m(lnm-1)$ ，$\displaystyle g_{i},n_{i}$ 均远大于 1.
 $$
 ln\Omega_{B.E.} \approx \sum[(g_i+n_i)\ln(g_i+n_i)-g_{i}\ln g_{i}-n_{i}\ln n_{i}]
 $$
@@ -25,7 +25,7 @@ $$
 可得
 
 $$
-n_{i}=g_{i}e^{ -(\alpha+\beta \xi _{i}+1) }
+n_{i}=\frac{g_{i}}{e^{ \alpha+\beta \xi _{i} }-1}
 $$
 ## 黑体辐射和普朗克分布
 黑体系统中光子数不守恒，令 $\displaystyle \alpha=0$ 从而去掉该约束后：
