--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/理想气体.md
@@ -1,4 +1,4 @@
-在具体应用过程之中，一般不严格区分经典和量子情形 #疑问 
+87u在具体应用过程之中，一般不严格区分经典和量子情形 #疑问 
 ## 单原子理想气体
 [[麦克斯韦——玻尔兹曼统计]] 给出
 $$
@@ -79,6 +79,7 @@ $$
 ## 双原子理想气体
 ### 哈密顿量
 哈密顿量=平动动能+转动动能+振动动能 
+激发难度：振动>>转动>>平动
 $$
 H=\frac{1}{2m}\left( p_{x}^2+p_{y}^2+p_{z}^2 \right) +\frac{1}{2I} \left( p_{\theta}^2+\frac{1}{\sin^2\theta}p_{\varphi}^2 \right)+\frac{1}{2m_{\mu}}\left( p_{r}^2+m_{\mu}^2\omega^2r^2 \right)
 $$
@@ -116,6 +117,8 @@ $$
 \epsilon_{l}=\frac{l(l+1)\hbar^2}{2I}\quad l=0,1,2\cdots
 $$
 $\displaystyle Z=Z^{平}Z^{转}Z^{振}$ 平动部分不需量子化 #疑问 
+#### 振动
+  
 $$
 Z^{振}=\sum_{n=0}^{\infty}e^{ -\beta \hbar \omega(n+\frac{1}{2}) }\implies e^{ -\beta\epsilon _{i} }
 $$
@@ -129,4 +132,37 @@ $$
 $$
 C^{振}=\left( \frac{ \partial U }{ \partial T }  \right)_{V}=Nk_{B}\left( \frac{\hbar\omega}{k_{B}T} \right)^2 \frac{e^{ \frac{\hbar\omega}{k_{B}T}}}{(-1+e^{\frac{\hbar\omega}{k_{B}T}})^2}
 $$
-零点振动能不参与其中
+零点振动能不参与其中，定义振动特征温度 $\displaystyle \theta_{v}$
+$$
+k\theta_{v}=\hbar r\omega 
+$$
+$$
+C^{振}=Nk_{B}\left ( \frac{\theta_{v}}{T} \right)^2 \frac{e^{ \frac{\theta_{v}}{T}}}{(-1+e^{\frac{\theta_{v}}{T}})^2}
+$$
+高温状态下，$\displaystyle \theta_{v}\ll T$
+$$
+C_{v}\sim Nk_{B}
+$$
+常温下 $\displaystyle \theta_{v}\gg T$ 
+$$
+	C_{v}\sim Nk_{B}\left( \frac{\theta_{v}}{T}\right)^2 e^{ -\frac{\theta_{v}}{T}}
+$$
+#### 转动
+$$
+Z_{转}=\sum_{l=0}^{\infty}\left( 2l+1 \right) e^{\frac{ -\beta (l+1)\hbar^2 }{2l}}\sim\sum_{l=0}^{\infty}\left( 2l+1 \right) e^{\frac{ -l (l+1)\theta_{r} }{T}}
+$$
+其中 $\displaystyle \theta_{r}=\frac{\hbar^2}{2kI}$，在 $\displaystyle \frac{\theta_{r}}{T}\ll 1$ 情况下，以积分代替求和进行连续化：
+$\displaystyle x=\frac{l(l+1)\theta_{r}}{T} \implies dx=\frac{(2l+1)\theta_{r}}{T}dl$
+$$
+Z_{转}=\frac{T}{\theta}\int_{0}^{\infty}  e^{ -x } dx =\frac{T}{\theta_{r}}=\frac{2kIT}{\hbar^2}=\frac{2I}{\beta \hbar^2}
+$$
+$$
+U_{转}=-N\frac{ \partial \ln Z }{ \partial \beta }=Nk_{B}T 
+$$
+$$
+C_{v.转}=Nk_{B}
+$$
+
+
+
+
