--- a/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/统计物理的动理学/麦克斯韦——玻尔兹曼统计.md
@@ -33,7 +33,7 @@ $$
 每个相格内粒子数：$\displaystyle n_{1},n_{2},n_{3},\cdots n_{i}\quad (\sum_{i} n_{i}=N)$
 $\displaystyle n$ 个粒子进入 $\displaystyle \omega _{i}$ 的概率为 $\displaystyle (g_{i})^{n_{i}}$，每相格实际存在粒子数的出现序列 $\displaystyle n_{1},n_{2},\cdots$ 的概率为 $\displaystyle \omega(n_{1},n_{2},\cdots)$，将 $n_{i}$ 个粒子放入相格的概率为 $$\displaystyle \omega(n_{1},n_{2},\cdots) \implies \prod(g_{i})^{n_{i}}$$
 由于同一个相格内部 $\displaystyle n_{i}$ 个粒子微观状态具有全同性，内部交换不变；以及考虑 $N$ 个粒子各自交换给出 $N!$ 个排列，概率概率修正为下式： $$\displaystyle \omega(n_{1},n_{2},\cdots) = \frac{N!}{\prod n_{i}!}\prod(g_{i})^{n_{i}}$$
-注意 $\displaystyle \sum \omega(n_{1},n_{2},\cdots)=1$
+注意 $\displaystyle \sum \omega(n_{1},n_{2},\cdots)=1$，考虑定域系统和经典极限条件
  
  ## 玻尔兹曼分布
  使 $\displaystyle \delta \ln \omega$ 最大的分布是[[平衡态分布]]，即最概然状态，由粒子数守恒和能量守恒可得：
@@ -52,15 +52,15 @@ $$
 系数 $\displaystyle \alpha,\beta$ 由守恒条件确定。
 即得麦克斯韦——玻尔兹曼分布：
 $$
-n_{i} = g_{i}e^{ \alpha-\beta e_{i} }
+n_{i} = g_{i}e^{ \alpha-\beta \epsilon_{i} }
 $$
 由归一化得配分函数 $\displaystyle Z$
 $$
-Z=\sum q_{i} e^{-\beta \epsilon _{i}}
+Z=\sum g_{i} e^{-\beta \epsilon _{i}}
 $$
 注意到 $\displaystyle N = e^{ \alpha }Z$ ，则
 $$
-n_{i}=\frac{N}{Z}g_{i}e^{ -\beta \epsilon _{i}} =-\frac{N}{\beta}\frac{ \partial Z }{ \partial \epsilon _{i} } 
+n_{i}=\frac{N}{Z}g_{i}e^{ -\beta \epsilon _{i}} =-\frac{N}{\beta}\frac{ \partial \ln Z }{ \partial \epsilon _{i} } 
 $$
 $$
 \left\langle  \epsilon _{i}\right\rangle =\frac{E}{N}= \frac{1}{N}\sum n_{i}\epsilon _{i}=\frac{1}{Z}\sum g_{i}\epsilon _{i}e^{ -\beta \epsilon _{i} } =-\frac{ \partial \ln Z }{ \partial \beta }
